# vessel-frame-plugins

./: .gitignore
processors/udp-message-forwarder/: pyproject.toml
renderers/waveshare_renderer/: pyproject.toml
renderers/waveshare_renderer/src/waveshare_renderer/: __init__.py
screens/aircraft/aircraft_map_screen/: pyproject.toml  readme.md
screens/aircraft/aircraft_map_screen/src/aircraft_map_screen/: __init__.py  bounds.py  layout.py  tiles.py
screens/aircraft/aircraft_map_screen/styles/: vessel-frame-acep.json  vessel-frame-bw.json  vessel-frame-spectra6.json
screens/aircraft/aircraft_table_screen/: pyproject.toml
screens/aircraft/aircraft_table_screen/src/aircraft_table_screen/: __init__.py
screens/aircraft/aircraft_table_screen/src/aircraft_table_screen/layouts/: __init__.py  base.py  landscape_base.py  landscape_large.py  landscape_standard.py  portrait_large.py  portrait_standard.py
sources/adsblol-message-source/: pyproject.toml
sources/adsblol-message-source/src/adsblol_message_processor/: __init__.py
sources/aisstreamio-message-source/: pyproject.toml
sources/aisstreamio-message-source/src/aisstreamio_message_processor/: __init__.py
sources/daisy-message-source/: pyproject.toml
sources/daisy-message-source/src/daisy_message_source/: __init__.py
sources/tcp-message-source/: pyproject.toml
sources/tcp-message-source/src/tcp_message_source/: __init__.py
