[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "daisy-message-source"
version = "0.1.0"
description = "Wegmatt Daisy I2C AIS receiver source plugin for Vessel Frame."
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
requires-python = ">=3.11"
dependencies = ["vessel-frame-core", "smbus2>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.messagesource"]
daisy_message_source = "daisy_message_source:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
daisy_message_source = "daisy_message_source:get_config_schema"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
