[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tcp-message-source"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.messagesource"]
tcp_message_source = "tcp_message_source:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
tcp_message_source = "tcp_message_source:get_config_schema"
